# obj-viewer

./: pyproject.toml
assets/shaders/: phong.slang
src/: Mesh.py  MeshRenderer.py  main.py
